# dual_arm_with_hands

amber_bringup/: CMakeLists.txt  package.xml
amber_bringup/config/: gazebo_bridge.yaml
amber_bringup/launch/: amber_gazebo.launch.xml
amber_urdf_description/: CMakeLists.txt  package.xml
amber_urdf_description/launch/: display.launch.xml
amber_urdf_description/rviz/: amber_b1_display.rviz
amber_urdf_description/urdf/: amber_b1_full_robot.xacro  amber_gazebo.xacro  amber_ros2_control.xacro  amber_urdf.xacro  materials.xacro  pr09_hand.xacro  pr09_hand_standalone.xacro
