<?xml version="1.0"?>
<package format="3">
  <name>amber_urdf_description</name>
  <version>0.0.0</version>
  <description>Amber URDF description package for ROS 2</description>

  <maintainer email="inhyeok@todo.todo">syuntoku14</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
